# ReactDjangoTemplate

./: .envrc.example  .gitignore  README.md  docker-compose.yaml  remake-container.sh
.github/: dependabot.yml
.github/workflows/: pr_agent.yml
backend/: .gcloudignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/api/: api.py  urls.py
backend/config/: settings.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: app.tsx  main.tsx
frontend/tests/jest/: sample.test.tsx
